--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   },
   "homepage": "https://github.com/williamsnieves/node-twitch-demo#readme",
   "dependencies": {
+    "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "cookies": "^0.7.3",
     "cors": "^2.8.5",
     "cuid": "^2.1.6",
     "dotenv": "^8.0.0",
@@ -32,6 +34,7 @@
     "lodash": "^4.17.11",
     "mongoose": "^5.6.3",
     "morgan": "^1.9.1",
+    "query-string": "^6.8.1",
     "validator": "^11.1.0"
   },
   "devDependencies": {
